objects/GW_Volunteers__Volunteer_Job__c.object
<CustomObject>
    <fields>
        <fullName>GW_Volunteers__Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Volunteer Jobs</relationshipLabel>
        <relationshipName>Volunteer_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Display_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if this Volunteer Job should be included in the Available Volunteer Jobs Sites page.</inlineHelpText>
        <label>Display on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__First_Shift__c</fullName>
        <label>First Shift</label>
        <summarizedField>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Start_Date_Time__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Volunteer Job is no longer active, and it won&apos;t be included in the Volunteers Report Hours Sites page.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Location_City__c</fullName>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Location_Information__c</fullName>
        <inlineHelpText>Put in any additional details, like driving directions or a URL to a map, in this field, and it will be included in automated email reminders.</inlineHelpText>
        <label>Location Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Location_Street__c</fullName>
        <label>Location Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Location_Zip_Postal_Code__c</fullName>
        <label>Location Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Location__c</fullName>
        <label>Location State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Completed_Hours__c</fullName>
        <inlineHelpText>Total number of Hours that are Completed.  Hours with other status values are not included.</inlineHelpText>
        <label>Number of Completed Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Total_Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Shifts__c</fullName>
        <label>Number of Shifts</label>
        <summaryForeignKey>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</fullName>
        <label># of Volunteers Still Needed</label>
        <summarizedField>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Number_of_Volunteers_Still_Needed__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Volunteers__c</fullName>
        <inlineHelpText>The total number of volunteers whose Hours Status = Completed or Confirmed.</inlineHelpText>
        <label>Number of Volunteers</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Number_of_Volunteers__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Confirmed, Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Ongoing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ongoing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Skills_Needed__c</fullName>
        <inlineHelpText>the skills the volunteer should have to do this job</inlineHelpText>
        <label>Skills Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Computer usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscaping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>basic accounting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Website_Time_Zone__c</fullName>
        <inlineHelpText>The Time Zone to use when displaying Shift times on Sites pages.   You only need to set this if you want to override both the Time Zone set on the Site Guest User profile, and the Time Zone set on the Volunteers campaign.</inlineHelpText>
        <label>Volunteer Website Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Pacific/Kiritimat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Chatham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Auckland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Enderbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Tongatapu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Kamchatka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Norfolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Lord_Howe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Guadalcanal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Adelaide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Brisbane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Darwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Seoul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Tokyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Hong_Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Kuala_Lumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Manila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Taipei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Perth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Bangkok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Jakarta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Saigon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Rangoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Dacca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Yekaterinburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Katmandu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Volunteer Job</label>
    <listViews>
        <fullName>GW_Volunteers__All_Jobs</fullName>
        <columns>NAME</columns>
        <columns>GW_Volunteers__Campaign__c</columns>
        <columns>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</columns>
        <columns>GW_Volunteers__Number_of_Completed_Hours__c</columns>
        <columns>GW_Volunteers__Ongoing__c</columns>
        <columns>GW_Volunteers__Display_on_Website__c</columns>
        <columns>GW_Volunteers__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Jobs</label>
    </listViews>
    <listViews>
        <fullName>GW_Volunteers__Available_Jobs</fullName>
        <columns>NAME</columns>
        <columns>GW_Volunteers__Campaign__c</columns>
        <columns>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</columns>
        <columns>GW_Volunteers__Number_of_Completed_Hours__c</columns>
        <columns>GW_Volunteers__Ongoing__c</columns>
        <columns>GW_Volunteers__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GW_Volunteers__Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Available Jobs</label>
    </listViews>
    <listViews>
        <fullName>GW_Volunteers__Ongoing_Jobs</fullName>
        <columns>NAME</columns>
        <columns>GW_Volunteers__Campaign__c</columns>
        <columns>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</columns>
        <columns>GW_Volunteers__Number_of_Completed_Hours__c</columns>
        <columns>GW_Volunteers__Ongoing__c</columns>
        <columns>GW_Volunteers__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GW_Volunteers__Ongoing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>GW_Volunteers__Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Ongoing Jobs</label>
    </listViews>
    <nameField>
        <label>Volunteer Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>